--- a/.forestry/front_matter/templates/team.yml
+++ b/.forestry/front_matter/templates/team.yml
@@ -184,3 +184,4 @@ pages:
 - content/teams/john-renta-1.md
 - content/teams/john-renta.md
 - content/teams/samuel-palmer.md
+- content/teams/sarah-conner.md
