--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -14,6 +14,13 @@ sections:
   label: Design
 - type: heading
   label: Default Pages
+- type: directory
+  path: content/listings
+  label: Property Listings
+  create: documents
+  match: "**/*"
+  templates:
+  - property
 - type: document
   path: content/contact/_index.md
   label: Contact
@@ -66,9 +73,12 @@ sections:
 - type: document
   path: data/idx.yaml
   label: Set Up
+- type: heading
+  label: Misc
 - type: document
-  path: config.toml
-  label: Developers Only
+  path: data/icons.json
+  label: Developer Access Only
+  read_only: true
 upload_dir: static/uploads
 public_path: "/uploads"
 front_matter_path: ''
