updated home design

--- a/.forestry/front_matter/templates/home-design.yml
+++ b/.forestry/front_matter/templates/home-design.yml
@@ -68,12 +68,8 @@ fields:
   - name: slideshow_home
     type: image_gallery
     config: {}
-<<<<<<< HEAD
     label: Add Slide Shows
     description: We recommend using less than 5 images to optimize page speed.
-=======
-    label: Slideshow Home
->>>>>>> 6c4afc5e336332a150e18630a7b7cfa4a99985bd
   label: Slideshow
 - name: main_image
   type: field_group
@@ -189,11 +185,15 @@ fields:
   type: blocks
   label: Home Sections
   template_types:
+  - sold-listings
   - intro
   - agent-slider
+  - featured-listings
   - featured-blog
   - featured-tiles
+  - rental-listings
   - cta
+  - showcase-featured-properties
   - testimonial-slider
   - idx-search-bar
   config:
