--- a/config.toml
+++ b/config.toml
@@ -36,3 +36,6 @@ category = "categories"
 tag = "tags"
 status = "status"
 type = "types"
+state = "states"
+city = "cities"
+zip-code = "zip-codes"
