--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ weight = 1
 category = "categories"
 tag = "tags"
 status = "status"
-type = "types"
+type = "type"
 state = "states"
 city = "cities"
-zip-code = "zip-codes"
+zip-code = "zip-code"
