--- a/config.toml
+++ b/config.toml
@@ -37,5 +37,5 @@ tag = "tags"
 status = "status"
 type = "type"
 state = "states"
-city = "cities"
-zip-code = "zip-code"
+city = "city"
+zip = "zip"
